--- a/src/app/buildOrder/less/buildOrder.less
+++ b/src/app/buildOrder/less/buildOrder.less
@@ -488,7 +488,7 @@ input.error, .errorCity {
 						font-size: 13px;
 						color: #54565d;
 						margin:0px;
-						width:50px;
+					
 					}
 					button.addCart {
 						padding: 10px 45px 6px 45px;
@@ -3209,15 +3209,13 @@ input.error, .errorCity {
 		    					text-align: center;
 		    					transition: background-color 0.5s ease-out;
 		    					text-decoration: none;
-		    					background-color: #969696;
-		   						color: #fff;
-		    					padding:7px 0 7px 0;
-		    					width: 26%;
+		    					color: #fff;
+		    					padding:7px 0 0 0;
+		    					width: 19%;
 		    					margin-left: 2%;
-								&:hover{
-		    					    color: #ffffff;
-    								background-color:#54565d;		
-		    					}
+								color:#000;
+								border-bottom: 1px solid #000;
+								text-align:left;
 						}
 					    .cont-shop{
 					     text-align: center;
@@ -3453,7 +3451,9 @@ input.error, .errorCity {
 			margin:0 0 10px 0;
 
 		}
-		
+		h5{
+			width:50px;
+		}
 		.price{
 			margin-left:20px;
 			.helvetica-bold;
