--- a/src/app/buildOrder/less/buildOrder.less
+++ b/src/app/buildOrder/less/buildOrder.less
@@ -433,10 +433,15 @@ input.error, .errorCity {
 					cursor: pointer;
 					text-decoration: none;
 					.font-spacing;
+					
 				}
 				&:hover{
 					svg{
 						fill:@primary-color;
+						
+					}
+					a{
+						text-decoration:underline;
 					}
 				}
 			}
